--- a/_config.yml
+++ b/_config.yml
@@ -67,8 +67,8 @@ ga_domain: stepday.github.io
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "努力在自己，评价在他人"
-sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "努力在自己 评价在他人"
+sidebar-avatar: https://avatars3.githubusercontent.com/u/4797259?s=400&u=ffaeb24e154d186fb3f499e9808d41b4b88e1a1d&v=4      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
