--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: 前端欧巴|stepday Blog
+title: 前端欧巴
 SEOTitle: 前端欧巴|stepday Blog
 header-img: img/home-bg.jpg
 email: aganar@qq.com
@@ -67,7 +67,7 @@ ga_domain: stepday.github.io
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "努力在自己 评价在他人"
+sidebar-about-description: "努力在自己,评价在他人"
 sidebar-avatar: https://avatars3.githubusercontent.com/u/4797259?s=400&u=ffaeb24e154d186fb3f499e9808d41b4b88e1a1d&v=4      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
