--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 前端欧巴
 SEOTitle: 前端欧巴|stepday Blog
-header-img: img/home-bg.jpg
+header-img: img/post-bg-universe.jpg
 email: aganar@qq.com
 description: "不定时分享前端技术干货，为浩瀚的知识海洋贡献自己的一份力量!"
 keyword: "博客, 个人网站, 互联网, Web, JavaScript, 前端,Vue,Webpack,Karma"
